--- a/src/components/users/common/header-component/reportDropdown.css
+++ b/src/components/users/common/header-component/reportDropdown.css
@@ -1,47 +1,63 @@
-/* Style The Dropdown Button */
-.dropbtn {
+
+.dropdown {
+    margin: 0;
+    padding: 0;
     background: white;
-    color: #4466f2;
-    padding: 16px;
-    /* font-size: 16px; */
     border: none;
+    cursor: pointer;
+    text-align: center !important;
+}
+
+.dropdown li {
+    position: relative;
+}
+
+.dropdown li a {
+    color: #4466f2;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    padding: 10px;
     cursor: pointer;
 }
 
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
+.dropdown li ul {
+    position: absolute;
+    top: 100%;
+    margin: 0;
+    /* padding: 0; */
+    padding: 0px 20px;
+    list-style: none;
+    display: none;
+    line-height: normal;
+    background-color: #ffffff;
 }
 
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #ffffff;
-  min-width: 120px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+.dropdown li ul li a {
+    text-align: center;
+    color: #000000;
+    font-size: 14px;
+    padding: 10px;
+    display: block;
+    white-space: nowrap;
 }
 
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-align: center;
-  text-decoration: none;
-  display: block;
+.dropdown li ul li a:hover {
+    background-color: #ffffff;
+    color: #000000;
 }
 
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block;
+.dropdown li ul li ul {
+    left: 100%;
+    top: 0;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
-/* .dropdown:hover .dropbtn {
-  background-color: #3e8e41;
-} */
+ul li:hover>a {
+    background-color: #ffffff;
+    color: #000000 !important;
+}
+
+ul li:hover>ul {
+    display: block;
+}
+ 
