--- a/src/components/users/common/header-component/reportDropdown.css
+++ b/src/components/users/common/header-component/reportDropdown.css
@@ -27,7 +27,7 @@
     position: absolute;
     top: 100%;
     margin: 0;
-    padding: 10px 20px;
+    padding: 10px 10px;
     list-style: none;
     display: none;
     line-height: normal;
@@ -42,14 +42,19 @@
     /* text-align: center; */
     color: #000000;
     font-size: 14px;
+    font-weight: 400;
     padding: 5px 10px;
     display: block;
     white-space: nowrap;
+    transition: all 0.3s ease-in-out;
 }
 
 .dropdown li ul li a:hover {
     background-color: #ffffff;
     color: #000000;
+    font-size: 15px;
+    font-weight: 700;
+    margin-left: 5px;
 }
 
 .dropdown li ul li ul {
