--- a/src/components/admin/users/access/List/ModulesAndLinks/ModulesAndLinks.css
+++ b/src/components/admin/users/access/List/ModulesAndLinks/ModulesAndLinks.css
@@ -9,9 +9,22 @@
 }
 .answer_wrapper.open {
   height: auto;
+  padding: 20px 0px;
+  border: 1px solid gray;
   /* height: 100px; */
 }
 
 .moduleInternalLinks{
   margin-left: 25px;;
+}
+
+/* .accordion_item.active .button {
+  background-color: #105057;
+} */
+.accordionX {
+  height: 0;
+  overflow: hidden;
+}
+.accordionX.open {
+  height: auto;
 }
