--- a/src/components/users/common/header-component/report.css
+++ b/src/components/users/common/header-component/report.css
@@ -17,17 +17,17 @@
     border: 0px;
     background: white;
 }
+.dropdown-menu li {
+    border: none !important;
+}
 .dropdown-item {
     color: #000000 !important;
     font-size: 14px;
     font-weight: 400;
-    padding: 5px 10px;
+    padding: 3px 10px;
     display: block;
     white-space: nowrap;
     transition: all 0.3s ease-in-out;
-}
-.dropdown-container{
-    padding: 10px 20px;
 }
 .dropdown-item:hover {
     background-color: #ffffff !important;
@@ -36,26 +36,52 @@
     font-weight: 700;
     margin-left: 5px;
 }
-.dropdown-menu li {
-    position: relative;
-    border: none !important;
-}
-.dropdown-menu .dropdown-submenu {
-    display: none !important;
-    position: absolute;
-    left: 100%;
-    top: -7px;
+.dropdown-container{
+    position: static;
+    padding: 5px 10px;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    height: 410px;
+    overflow-y: scroll;
 }
-.dropdown-container > li:hover > .dropdown-submenu {
-    display: block !important;
+.dropdown-container li {
+    margin: 0px 0px !important;
 }
-.dropdown-menu .dropdown-submenu-left {
-    right: 100%;
-    left: auto;
+
+.children {
+  height: 0;
+  overflow: hidden;
 }
-.dropdown-menu > li:hover > .dropdown-submenu {
-    display: block !important;
+.children.active {
+  height: auto;
+}
+.dropdown-menu{
+    position: absolute;
+    transform: translate3d(0px, 52px, 0px);
+    top: 0px;
+    left: 0px;
+    will-change: transform;
+}
+
+.dropdown-menu.show{
+    display: block;
+}
+.subDropdown{
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+}
+.subDropdown > li a {
+    color: #000000 !important;
+    font-size: 12px;
+    font-weight: 400;
+    padding: 3px 10px;
+    display: block;
+    white-space: nowrap;
+    transition: all 0.3s ease-in-out;
+}
+.subDropdown > li:hover > a {
+    background-color: #ffffff !important;
+    font-size: 14px;
+    font-weight: 500;
 }
