report header dropdown menu height scroll solve

--- a/src/components/users/common/header-component/report.css
+++ b/src/components/users/common/header-component/report.css
@@ -41,6 +41,9 @@
     padding: 5px 10px;
     display: flex;
     flex-direction: column;
+    height: auto;
+}
+.dropdown-container.long{
     height: 410px;
     overflow-y: scroll;
 }
