--- a/src/components/users/common/header-component/report.css
+++ b/src/components/users/common/header-component/report.css
@@ -42,6 +42,7 @@
     display: flex;
     flex-direction: column;
     height: auto;
+    border: 1px solid gray;
 }
 .dropdown-container.long{
     height: 410px;
