--- a/src/components/users/common/header-component/report.css
+++ b/src/components/users/common/header-component/report.css
@@ -2,7 +2,6 @@
 .dropdown {
     margin: 0;
     padding: 0;
-    background: white;
     border: none;
     cursor: pointer;
     text-align: left !important;
@@ -12,13 +11,13 @@
     color: #4466f2;
     text-decoration: none;
     display: block;
-    padding: 16px 10px;
+    padding: 18px 15px;
     cursor: pointer;
     border: 0px;
     background-color: transparent;
 }
 .dropdown > button.longtitle {
-    padding: 8px 10px;
+    padding: 8px 15px;
 }
 .dropdown-menu li {
     border: none !important;
@@ -52,15 +51,23 @@
     overflow-y: scroll;
 }
 .dropdown-container li {
-    margin: 0px 0px !important;
+    margin: 1px 0px !important;
 }
 
 .children {
-  height: 0;
-  overflow: hidden;
+    display: none;
+    position: absolute;
+    left: 100%;
+    top: -7px;
+}
+.dropdown-item-hover:hover > .children.active{
+    display: block;
 }
 .children.active {
-  height: auto;
+    display: none;
+    position: absolute;
+    left: 100%;
+    top: -7px;
 }
 /* .dropdownHoverBtn{
     margin-top: 5px;
@@ -83,8 +90,11 @@
     display: block;
 }
 .subDropdown{
-    margin-left: 20px;
+    margin-left: 11px;
+    padding: 5px 10px;
+    border: 1px solid gray;
     display: flex;
+    background: #fff;
     flex-direction: column;
 }
 .subDropdown > li a {
