--- a/src/components/users/common/header-component/report.css
+++ b/src/components/users/common/header-component/report.css
@@ -18,10 +18,27 @@
 }
 .dropdown > button.longtitle {
     padding: 8px 15px;
+    
 }
 .dropdown-menu li {
     border: none !important;
 }
+/* Hide default scrollbar */
+::-webkit-scrollbar {
+    width: 2px; 
+    
+  }
+  
+  /* Track (background) of the scrollbar */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Set your preferred color for the track */
+  }
+  
+  /* Handle (thumb) of the scrollbar */
+  ::-webkit-scrollbar-thumb {
+    background: #4e70ea; /* Set your preferred color for the thumb */
+  }
+  
 .dropdown-item {
     color: #000000 !important;
     font-size: 14px;
@@ -44,7 +61,7 @@
     display: flex;
     flex-direction: column;
     height: auto;
-    border: 1px solid gray;
+    border: 1px solid rgb(58, 123, 221);
 }
 .dropdown-container.long{
     height: 410px;
