--- a/src/components/users/common/header-component/report.css
+++ b/src/components/users/common/header-component/report.css
@@ -62,6 +62,8 @@
     flex-direction: column;
     height: auto;
     border: 1px solid rgb(58, 123, 221);
+    height: 650px !important;
+    overflow-y: auto;
 }
 .dropdown-container.long{
     height: 410px;
@@ -105,6 +107,8 @@
 
 .dropdown-menu.show{
     display: block;
+    /* height: 650px !important;
+    overflow-y: auto; */
 }
 .subDropdown{
     margin-left: 11px;
