--- a/src/components/users/common/header-component/report.css
+++ b/src/components/users/common/header-component/report.css
@@ -39,6 +39,15 @@
     background: #4e70ea; /* Set your preferred color for the thumb */
   }
   
+.overFlow{
+    overflow-y: auto !important;
+    height: 300px !important;;
+}
+
+.smallFlow{
+    height: 100%;
+}
+
 .dropdown-item {
     color: #000000 !important;
     font-size: 14px;
@@ -62,8 +71,6 @@
     flex-direction: column;
     height: auto;
     border: 1px solid rgb(58, 123, 221);
-    height: 650px !important;
-    overflow-y: auto;
 }
 .dropdown-container.long{
     height: 410px;
@@ -77,7 +84,7 @@
     display: none;
     position: absolute;
     left: 100%;
-    top: -7px;
+    
 }
 .dropdown-item-hover:hover > .children.active{
     display: block;
@@ -86,7 +93,9 @@
     display: none;
     position: absolute;
     left: 100%;
-    top: -7px;
+    visibility: visible;
+    opacity: 1;
+    z-index: 1;
 }
 /* .dropdownHoverBtn{
     margin-top: 5px;
@@ -107,8 +116,8 @@
 
 .dropdown-menu.show{
     display: block;
-    /* height: 650px !important;
-    overflow-y: auto; */
+    height: auto !important;
+    /* overflow-y: auto; */
 }
 .subDropdown{
     margin-left: 11px;
