--- a/src/components/users/common/header-component/report.css
+++ b/src/components/users/common/header-component/report.css
@@ -96,6 +96,8 @@
     visibility: visible;
     opacity: 1;
     z-index: 1;
+    cursor: pointer;
+    left: 138px;
 }
 /* .dropdownHoverBtn{
     margin-top: 5px;
@@ -126,6 +128,8 @@
     display: flex;
     background: #fff;
     flex-direction: column;
+    position: relative;
+    top: -35px !important;
 }
 .subDropdown > li a {
     color: #000000 !important;
