--- a/src/components/users/factory/designLayout/Add.css
+++ b/src/components/users/factory/designLayout/Add.css
@@ -1,3 +1,20 @@
 #engraverList{
     padding: 6px 6px !important;
 }
+#layout_col{
+    max-width: 23% !important;
+}
+#layout_history{
+    max-width: 23% !important;
+}
+#base_area{
+    max-width: 24% !important;
+}
+#engravers_order{
+    max-width: 30% !important;
+    flex: 1 0 25% !important;
+}
+#base_area .form-row{
+    margin-right: -25px !important;
+    margin-left: -5px !important;
+}
