api data displayed and design format changed

--- a/src/components/users/Apps.css
+++ b/src/components/users/Apps.css
@@ -4,15 +4,7 @@
     height: 100vh;
     flex: 1;
 } */
-.page-body{
-    display: flex;
-   height: 100vh;
-}
-#card-column-area{
-   
-    flex-direction: column ;
-    height: 100vh;
-}
-.card-footer{
+ 
+/* .card-footer{
     margin-top:auto;
-}
+} */
