Account payment selection bug fixed

--- a/src/components/users/jobOrder/listData.css
+++ b/src/components/users/jobOrder/listData.css
@@ -2,3 +2,7 @@
     max-width: none !important;
     width: 57% !important;
 }
+.modal-xlg{
+    max-width: none !important;
+    width: 77% !important;
+}
