--- a/src/assets/scss/theme/_custom.scss
+++ b/src/assets/scss/theme/_custom.scss
@@ -113,7 +113,7 @@ table.mdb-dataTable thead, table thead.mdb-dataTable-head{
 }
 table.table th {
     border: 1px solid #c5c7cc !important;
-    padding: 6px 16px !important;
+    padding: 6px 16px ;
     vertical-align: center !important;
 }
 table.table td{
