--- a/src/components/users/supplyChainReport/baseCylinderOrder/style.scss
+++ b/src/components/users/supplyChainReport/baseCylinderOrder/style.scss
@@ -49,7 +49,7 @@
 .fl{
     position: absolute;
     top: 5px;
-    left: 45%;
+    left: 46%;
     // left: 480px;
 }
 .flValue{
@@ -72,9 +72,28 @@
 .printArea{
     position: absolute;
     top: 62px;
-    left: 44%;
+    left: 45%;
     // width: 35px;
     // left: 480px;
+}
+/* Medium screens */
+@media only screen and (max-width: 992px) {
+    .printArea {
+        /* Adjust styles for medium screens here */
+        left: 42%;
+    }
+}
+@media only screen and (min-width: 993px) and ( max-width: 1278px) {
+    .printArea {
+        /* Adjust styles for medium screens here */
+        left: 43%;
+    }
+}
+@media only screen and (min-width: 766px) and ( max-width: 890px) {
+    .printArea {
+        /* Adjust styles for medium screens here */
+        left: 40%;
+    }
 }
 .printAreaValue{
     position: absolute;
