--- a/src/assets/scss/theme/_custom.scss
+++ b/src/assets/scss/theme/_custom.scss
@@ -120,7 +120,7 @@ table.table th {
 table.table td{
     border: 1px solid black !important;
     // border: 1px solid #c5c7cc !important;
-    padding: 12px 8px !important;
+    // padding: 12px 8px !important;
     vertical-align: center !important;
 }
 
