--- a/src/components/users/factoryReport/engravingRemainingJobs/style.scss
+++ b/src/components/users/factoryReport/engravingRemainingJobs/style.scss
@@ -1,3 +1,9 @@
+.table th, .table td {
+    padding: 2px 5px !important;
+
+    // vertical-align: middle;
+    // border-top: 1px solid #dee2e6;
+}
 .report-header {
     .company-info {
         text-align: right;
